--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -14,21 +14,7 @@ library(plotly)
 ```
 
 ```{r include=FALSE}
-data("nyc_airbnb")
-
-nyc_airbnb = 
-  nyc_airbnb %>% 
-  mutate(rating = review_scores_location / 2) %>% 
-  select(
-    borough = neighbourhood_group, neighbourhood, price, room_type, 
-    lat, long, rating
-    ) %>% 
-  filter(
-    borough == "Manhattan",
-    room_type == "Entire home/apt",
-    price %in% 100:500
-    ) %>% 
-  drop_na(rating)
+data("instacart")
 ```
 
 Column {data-width=650}
@@ -37,14 +23,14 @@ Column {data-width=650}
 ### Chart A
 
 ```{r}
-nyc_airbnb %>% 
+instacart %>% 
+  count(aisle) %>% 
+  filter(n > 10000) %>%
   mutate(
-    text_label = str_c("Neighbourhood: ", neighbourhood, "\nPrice: ", price)) %>% 
-  plot_ly(
-    x = ~lat, y = ~long, color = ~price,
-    type = "scatter", mode = "markers",
-    alpha = 0.5, text = ~text_label
-  )
+    text_label = str_c("Aisle: ", aisle, "\nCount: ", n)) %>% 
+  mutate(aisle = fct_reorder(aisle, n)) %>% 
+  plot_ly(x = ~aisle, y = ~n, type = "scatter", mode = "markers",
+          text = ~text_label)
 ```
 
 Column {data-width=350}
@@ -53,22 +39,21 @@ Column {data-width=350}
 ### Chart B
 
 ```{r}
-nyc_airbnb %>% 
-  mutate(neighbourhood = fct_reorder(neighbourhood, price)) %>% 
-  plot_ly(y = ~price, color = ~neighbourhood, 
-         type = "box", colors = "viridis")
+instacart %>% 
+  filter (product_name %in% c("Pink Lady Apples","Coffee Ice Cream")) %>%
+  group_by(product_name, order_dow) %>% 
+  summarize(order_hour_of_day_mean = mean(order_hour_of_day)) %>% 
+  plot_ly(y = ~order_hour_of_day_mean, color = ~product_name, type = "box")
 ```
 
 ### Chart C
 
 ```{r}
-nyc_airbnb %>% 
-  count(neighbourhood) %>% 
-  mutate(neighbourhood = fct_reorder(neighbourhood, n)) %>%
-  plot_ly(
-    x = ~neighbourhood, y = ~n,
-    type = "bar"
-  ) 
+instacart %>% 
+  filter (aisle %in% c("baking ingredients","dog food care","packaged vegetables fruits")) %>% 
+  group_by(aisle) %>% 
+  count(product_name) %>% 
+  plot_ly(x =~aisle, y = ~n, color = ~aisle, type = "bar", colors = "viridis")
 ```
 
 ## rmarkdown::render("dashboard.Rmd", output_format = "flexdashboard::flex_dashboard")
